--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -13,6 +13,44 @@
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <form>
+        <div>
+          <label for="name">Name:</label>
+          <input id="name" type="text" name="name">
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input id="email" type="email" name="email">
+        </div>
+        <div>
+          <label for="form-messege">Your message</label>
+          <textarea name="messege" id="form-messege" ></textarea>
+        </div>
+      </form>
+      <!-- <form>
+        <div>
+        <label for="name">First name</label>
+        <input id="name" type="text" name="name">
+        </div>
+        <div>
+        <label for="location">Zipcode:</label>
+        <input id ="location" type="text" name = "Zipcode"  maxlength="5" required>
+        </div>
+        <div>
+          <label for =" form-message">Your message</label>
+          <textarea id="form-message" name="message"
+          autofocus="on" required maxlength="200"></textarea>
+        </div>
+      </form>
+
+      <form><fieldset>
+        <legend>Shipping Information</legend>
+        <div>
+          <label for="name">Full Name</label>
+          <input id="name" type="text" name="name">
+        </div>
+      </fieldset></form> -->
+    </main>
   </body>
 </html>
